<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Registro">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/userRegistry"
        android:textSize="25sp"
        android:layout_gravity="center"
        />
    <EditText
        android:id="@+id/tv_userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:inputType="text"
        />
    <EditText
        android:id="@+id/tv_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user"
        android:inputType="text"
        />
    <EditText
        android:id="@+id/tv_birthDay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/birthDay"
        android:inputType="date"
        />
    <EditText
        android:id="@+id/tv_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        />
    <EditText
        android:id="@+id/tv_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="text"
        />
    <Button
        android:id="@+id/btn_userRegistry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Registrar"
        android:layout_gravity="center"
        />
    <EditText
        android:id="@+id/tv_userType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:visibility="invisible"
        android:text="1"
        />
</LinearLayout>