<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegistroMedicos">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/medicalRegistry"
        android:textSize="25sp"
        android:layout_gravity="center"
        />
    <EditText
        android:id="@+id/tv_medicalName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:inputType="text"
        />
    <EditText
        android:id="@+id/tv_medicalUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user"
        android:inputType="text"
        />
    <EditText
        android:id="@+id/tv_birthDay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/birthDay"
        android:inputType="date"
        />
    <EditText
        android:id="@+id/tv_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        />
    <EditText
        android:id="@+id/tv_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="text"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chooseSpecialty"
        />
    <Spinner
        android:id="@+id/static_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/chooseSpecialty"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        />
    <EditText
        android:id="@+id/tv_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Telefono"
        android:inputType="number"
        />
    <EditText
        android:id="@+id/tv_cel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Celular"
        android:inputType="number"
        />
    <EditText
        android:id="@+id/tv_cedula"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Cedula"
        android:inputType="number"
        />

    <Button
        android:id="@+id/btn_medicalRegistry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Registrar"
        android:layout_gravity="center"
        />
    <EditText
        android:id="@+id/tv_userType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:visibility="invisible"
        android:text="2"
        />


</LinearLayout>